# twtrc

Twitterc/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  main.cpp  twitter.cpp  twitter.h  twitterc.1
Twitterc/.deps/: main.Po  twitter.Po
Twitterc/Twitterc.xcodeproj/: chrisjoel.pbxuser  chrisjoel.perspectivev3  project.pbxproj
